--- a/MemoriaFlora/Info.plist
+++ b/MemoriaFlora/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SF-Pro-Text-Bold.otf</string>
@@ -37,6 +39,5 @@
 			</array>
 		</dict>
 	</dict>
-
 </dict>
 </plist>
