--- a/MemoriaFlora/GoogleService-Info.plist
+++ b/MemoriaFlora/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>404510228538-288hu1fem0325leur1a4iptsvfp9vbir.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.404510228538-288hu1fem0325leur1a4iptsvfp9vbir</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCzvhsb6-EC0qR-JGdRBM9ytJSBmmd8YfY</string>
 	<key>GCM_SENDER_ID</key>
@@ -26,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:404510228538:ios:fcf9569ddba8136b77f503</string>
+	<key>DATABASE_URL</key>
+	<string>https://memoriaflora-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
