--- a/MemoriaFlora/Info.plist
+++ b/MemoriaFlora/Info.plist
@@ -1,59 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.404510228538-288hu1fem0325leur1a4iptsvfp9vbir</string>
-			</array>
-		</dict>
-	</array>
-	<key>FirebaseAppDelegateProxyEnabled</key>
-	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>SF-Pro-Text-Bold.otf</string>
-		<string>SF-Pro-Text-BoldItalic.otf</string>
-		<string>SF-Pro-Text-Heavy.otf</string>
-		<string>SF-Pro-Text-HeavyItalic.otf</string>
-		<string>SF-Pro-Text-Light.otf</string>
-		<string>SF-Pro-Text-LightItalic.otf</string>
-		<string>SF-Pro-Text-Medium.otf</string>
-		<string>SF-Pro-Text-MediumItalic.otf</string>
-		<string>SF-Pro-Text-Regular.otf</string>
-		<string>SF-Pro-Text-Regular.ttf</string>
-		<string>SF-Pro-Text-RegularItalic.otf</string>
-		<string>SF-Pro-Text-Semibold.otf</string>
-		<string>SF-Pro-Text-SemiboldItalic.otf</string>
-	</array>
-	<key>UIApplicationSceneManifest</key>
-	<dict>
-		<key>UIApplicationSupportsMultipleScenes</key>
-		<false/>
-		<key>UISceneConfigurations</key>
-		<dict>
-			<key>UIWindowSceneSessionRoleApplication</key>
-			<array>
-				<dict>
-					<key>UISceneConfigurationName</key>
-					<string>Default Configuration</string>
-					<key>UISceneDelegateClassName</key>
-					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
-				</dict>
-			</array>
-		</dict>
-	</dict>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>remote-notification</string>
-	</array>
-</dict>
+    <dict>
+        <key>CFBundleURLTypes</key>
+        <array>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Editor</string>
+                <key>CFBundleURLSchemes</key>
+                <array>
+                    <string>com.googleusercontent.apps.404510228538-288hu1fem0325leur1a4iptsvfp9vbir</string>
+                </array>
+            </dict>
+        </array>
+        <key>FirebaseAppDelegateProxyEnabled</key>
+        <false/>
+        <key>UIAppFonts</key>
+        <array>
+            <string>SF-Pro-Text-Bold.otf</string>
+            <string>SF-Pro-Text-BoldItalic.otf</string>
+            <string>SF-Pro-Text-Heavy.otf</string>
+            <string>SF-Pro-Text-HeavyItalic.otf</string>
+            <string>SF-Pro-Text-Light.otf</string>
+            <string>SF-Pro-Text-LightItalic.otf</string>
+            <string>SF-Pro-Text-Medium.otf</string>
+            <string>SF-Pro-Text-MediumItalic.otf</string>
+            <string>SF-Pro-Text-Regular.otf</string>
+            <string>SF-Pro-Text-Regular.ttf</string>
+            <string>SF-Pro-Text-RegularItalic.otf</string>
+            <string>SF-Pro-Text-Semibold.otf</string>
+            <string>SF-Pro-Text-SemiboldItalic.otf</string>
+        </array>
+        <key>UIApplicationSceneManifest</key>
+        <dict>
+            <key>UIApplicationSupportsMultipleScenes</key>
+            <false/>
+            <key>UISceneConfigurations</key>
+            <dict>
+                <key>UIWindowSceneSessionRoleApplication</key>
+                <array>
+                    <dict>
+                        <key>UISceneConfigurationName</key>
+                        <string>Default Configuration</string>
+                        <key>UISceneDelegateClassName</key>
+                        <string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+                        <key>UISceneStoryboardFile</key>
+                        <string>Main</string>
+                    </dict>
+                </array>
+            </dict>
+        </dict>
+        <key>NSPhotoLibraryUsageDescription</key>
+        <string>This app requires access to the photo library, This enables you to seamlessly upload photos when creating posts, making sharing moments</string>
+        <key>UIBackgroundModes</key>
+        <array>
+            <string>fetch</string>
+            <string>remote-notification</string>
+        </array>
+    </dict>
 </plist>
