--- a/MemoriaFlora/Info.plist
+++ b/MemoriaFlora/Info.plist
@@ -55,5 +55,34 @@
 		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fbAPP-ID</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>425657187110434</string>
+    <key>FacebookClientToken</key>
+    <string>4b3e6f6e5a5dd978afadd62be34fef86</string>
+    <key>FacebookDisplayName</key>
+    <string>Caro Estinto</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb425657187110434</string>
+            </array>
+        </dict>
+    </array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fb-messenger-share-api</string>
+    </array>
 </dict>
 </plist>
