--- a/MemoriaFlora/Info.plist
+++ b/MemoriaFlora/Info.plist
@@ -5,6 +5,16 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleIdentifier</key>
+			<string></string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb965711241750497</string>
+			</array>
+		</dict>
+		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
@@ -13,8 +23,19 @@
 			</array>
 		</dict>
 	</array>
+	<key>FacebookAppID</key>
+	<string>965711241750497</string>
+	<key>FacebookClientToken</key>
+	<string>877e80b382346011b9665d8f721a5d63</string>
+	<key>FacebookDisplayName</key>
+	<string>Caro Estinto</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SF-Pro-Text-Bold.otf</string>
@@ -55,34 +76,5 @@
 		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
-    <key>CFBundleURLTypes</key>
-    <array>
-      <dict>
-      <key>CFBundleURLSchemes</key>
-      <array>
-        <string>fb965711241750497</string>
-      </array>
-      </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>965711241750497</string>
-    <key>FacebookClientToken</key>
-    <string>877e80b382346011b9665d8f721a5d63</string>
-    <key>FacebookDisplayName</key>
-    <string>Caro Estinto</string>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>fb965711241750497</string>
-            </array>
-        </dict>
-    </array>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-      <string>fbapi</string>
-      <string>fb-messenger-share-api</string>
-    </array>
 </dict>
 </plist>
