--- a/MemoriaFlora/GoogleService-Info.plist
+++ b/MemoriaFlora/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>404510228538-288hu1fem0325leur1a4iptsvfp9vbir.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.404510228538-288hu1fem0325leur1a4iptsvfp9vbir</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>404510228538-iqreqk1lti2j57np0upnkjni9hitqre6.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCzvhsb6-EC0qR-JGdRBM9ytJSBmmd8YfY</string>
 	<key>GCM_SENDER_ID</key>
