--- a/MemoriaFlora/Info.plist
+++ b/MemoriaFlora/Info.plist
@@ -70,6 +70,8 @@
 			</array>
 		</dict>
 	</dict>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
